objects/Speaker__c.object
<CustomObject>
    <description>Record of all Speaker</description>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company where the Speaker belong</description>
        <inlineHelpText>ex. ABC Company</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Address of the Speaker</description>
        <inlineHelpText>ex. email@gmail.com</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contact Number of the Speaker</description>
        <inlineHelpText>ex. 09672688171</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>